--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,54 @@
 .App {
-    text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-    height: 40vmin;
-    pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-    color: #61dafb;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /* my css */
+
 .img-product {
   width: 100%;
   max-height: 280px;
 }
+
 .cardProducts {
   display: flex;
   flex-direction: row;
 }
+
 .mask {
   width: 100%;
   height: 100%;
@@ -58,6 +61,7 @@
   padding-top: 30px;
   position: relative;
 }
+
 .card-body {
   padding: 20px;
 }
@@ -68,18 +72,21 @@
   font-size: 14px;
   padding: 0;
 }
-.card > .view {
+
+.card>.view {
   min-height: 280px;
   margin-left: 4%;
   margin-right: 4%;
   margin-top: -20px;
   position: relative;
 }
-.card > .view > img {
+
+.card>.view>img {
   width: 100%;
   max-width: 100%;
   height: auto;
 }
+
 .card.card-shadow {
   margin-top: 40px;
   width: 100%;
@@ -89,23 +96,27 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
 }
+
 .card .view {
-  box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
   min-height: 331px;
   background: #fff;
   display: grid;
   align-items: flex-end;
 }
+
 .card-title {
   font-size: 26px;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  display: -webkit-box;overflow: hidden;
-  text-overflow: ellipsis; 
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
 .card .card-text {
   font-size: 14px;
   -webkit-line-clamp: 1;
@@ -113,30 +124,37 @@
   overflow: hidden;
   display: -webkit-box;
 }
+
 .card-body h4 {
   margin-bottom: 16px;
 }
+
 .card-footer {
   padding: 12px 20px;
-  border-top: 1px solid rgba(0,0,0,.125);
+  border-top: 1px solid rgba(0, 0, 0, .125);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .card .card-footer .left {
   font-weight: 600;
   color: #337ab7;
   font-size: 26px;
 }
+
 .card .card-footer .between {
   max-width: 60px;
 }
+
 .card .card-footer .right {
   display: flex;
 }
+
 .blue-gradient {
-  background: linear-gradient(40deg,#45cafc,#303f9f);
+  background: linear-gradient(40deg, #45cafc, #303f9f);
 }
+
 .btn-floating {
   z-index: 1;
   overflow: hidden;
@@ -147,12 +165,14 @@
   color: #fff;
   margin: 10px;
 }
+
 .btn-floating i {
   width: inherit;
   font-size: 20px;
   line-height: 47px;
   text-align: center;
 }
+
 .mt-20 {
   margin-top: 20px;
 }
@@ -173,16 +193,17 @@
   display: flex;
   align-items: flex-end;
 }
+
 .footer .btn-group a:hover {
   color: red;
 }
 
-.footer .link-zalo > img {
+.footer .link-zalo>img {
   background-color: #fff;
   height: 20px;
 }
 
-.footer .link-zalo:hover > img {
+.footer .link-zalo:hover>img {
   background-color: red;
 }
 
@@ -202,12 +223,14 @@
   width: 80%;
   overflow: hidden;
 }
+
 .slick-prev, .slick-next {
   background: #996600 !important;
   margin-left: 3%;
   margin-right: 3%;
   z-index: 5;
 }
+
 /* .img-slick-breadcrumb .breadcrumb img {
   margin-right: 240px;
 }
@@ -218,24 +241,30 @@
 .wrapperContent {
   padding-top: 70px;
 }
-.footer > div {
+
+.footer>div {
   display: flex;
   align-items: center;
 }
+
 .cart .product-table th {
   color: #3f51b5;
   font-weight: 600;
   font-size: 16px;
 }
+
 .cart .icon-delete {
   text-align: center;
 }
-.cart .icon-delete > button {
+
+.cart .icon-delete>button {
   padding: 5px 15px;
 }
+
 .cart .center-on-small-only {
   text-align: center;
 }
+
 /* .img-slick-breadcrumb .recommend {
   margin-right: 240px;
 }
@@ -243,22 +272,28 @@
   margin: 50px;
   margin-right: 240px;
 } */
+
 .cart .total-price {
   text-align: center;
 }
+
 .txt-profile {
   margin-top: 1rem;
 }
+
 #root {
   overflow-x: hidden;
 }
+
 /* .img-slick-breadcrumb .breadcrumb img {
   width: 70%;
 } */
+
 .text-title .text-title-login {
   font-size: 14px;
   color: red;
 }
+
 .link-register .mt-10 {
   margin-top: 10px;
 }
@@ -267,19 +302,23 @@
   position: relative;
   min-height: -webkit-calc(100vh - 180px);
 }
+
 .menu-sidebar-header {
   position: fixed;
   z-index: 15;
   width: 100vw;
 }
+
 .menu-header {
   position: fixed;
   /* width: 100vw; */
   z-index: 10;
 }
+
 .menu-sidebar {
   position: absolute;
 }
+
 .recommend {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -287,31 +326,55 @@
   padding-left: 50px;
 }
 
+.error-password {
+  display: block;
+  color: red;
+  float: left;
+}
+
+.pd-15 {
+  padding: 15px;
+}
+
+.pd-10 {
+  padding: 10px;
+  margin-right: 10px;
+}
+
+.fs-text-result {
+  font-size: 24px;
+}
+
 @media only screen and (min-width: 981px) {
   .img-slick-breadcrumb {
     margin-left: 240px;
     width: auto !important;
   }
-} 
+}
+
 @media only screen and (max-width: 980px) {
-  .responsive-drawer-paper > div {
+  .responsive-drawer-paper>div {
     min-height: 50vh;
     opacity: 0.7;
   }
   .card .view {
     justify-items: center;
   }
-  .card .view > img {
+  .card .view>img {
     width: 50%;
   }
   h5 {
     font-size: medium;
   }
-}
-@media only screen and (max-width: 480px) {
-  h5, .cart .product-table th{
-    font-size: 12px;
+  .center-on-small-only .btn.btn-sm {
+    padding: 5px 15px;
+    display: flex;
+    align-items: center;
   }
 }
 
-
+@media only screen and (max-width: 480px) {
+  h5, .cart .product-table th {
+    font-size: 12px;
+  }
+}
